--- a/nodestack/package.json
+++ b/nodestack/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "append-field": "^1.0.0",
     "body-parser": "^1.19.0",
+    "busboy": "^0.3.1",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "mongoose": "^5.5.15",
     "multer": "^1.4.1",
+    "mysql": "^2.17.1",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
