--- a/nodestack/package.json
+++ b/nodestack/package.json
@@ -6,6 +6,10 @@
     "append-field": "^1.0.0",
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
+    "consolidate": "^0.15.1",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "mongoose": "^5.5.15",
